# soulboard-icp

./: Cargo.toml  ICP_INTEGRATION_GUIDE.md  README.md  dfx.json  package-lock.json  package.json  soulboard-icp-backend.did
src/soulboard-icp-backend/: Cargo.toml
src/soulboard-icp-backend/src/: lib.rs
src/soulboard-icp-frontend/: package.json
src/soulboard-icp-frontend/src/: App.jsx
