[package]
name = "soulboard-icp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" 
ic-stable-structures = "0.7.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
icrc-ledger-types = "0.1.1"
getrandom = { version = "0.2", features = ["custom" ] }
uuid = { version = "1", features = ["v4" , "serde", "rng-getrandom", "js"] }
